# accumulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  accumulator_2d.hpp  test_accumulator_2d.cpp  utils.hpp
benchmark/: CMakeLists.txt  bench_accumulator.cpp
include/accumulator/: Counter.hpp  MaxBlock.hpp  Paged.hpp  Simple.hpp
include/accumulator/detail/: detail.hpp
test/: CMakeLists.txt  test_accumulator.cpp
